fix: wrong align in archive label

--- a/source/css/global_page.scss
+++ b/source/css/global_page.scss
@@ -20,10 +20,9 @@
         font-size: 1.5rem;
         line-height: 1.75rem;
         width: 4rem;
-        height: 2rem;
-        padding-bottom: .25rem;
         text-align: right;
         box-sizing: border-box;
+        vertical-align: middle;
     }
 
     &>.ball {
